...
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <Button
                    android:id="@+id/btnDetailClose"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="CLOSE"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#0D1B2A"
                    android:textStyle="bold"
...
